--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
           <scope>provided</scope>
       </dependency>
 
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20210307</version>
+	</dependency>
 
 	</dependencies>
 </project>
