--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,16 @@
 	</build>
 
 	<dependencies>
-
+	<!--  스프링 모듈 라이브러리 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
+			<version>5.2.8.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
 			<version>5.2.8.RELEASE</version>
 		</dependency>
 
@@ -38,12 +44,8 @@
 			<version>1.7.30</version>
 		</dependency>
 
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-
+		
+	<!-- Servlet jsp와 관련된 라이브러리-->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -57,12 +59,49 @@
           <version>2.3.3</version>
           <scope>provided</scope>
       </dependency>
-
+      
+      <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+      
+	<!-- json관련 라이브러리 -->
 	<dependency>
 	    <groupId>org.json</groupId>
 	    <artifactId>json</artifactId>
 	    <version>20210307</version>
 	</dependency>
-
+	
+	<!-- DB 관련 라이브러리 -->
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-dbcp2</artifactId>
+	    <version>2.8.0</version>
+	</dependency>
+		<dependency>
+	    <groupId>com.oracle</groupId>
+	    <artifactId>ojdbc7</artifactId>
+	    <version>12.1.0.2</version>
+	</dependency>
+	<!--  
+	      <dependency>
+          <groupId>com.oracle</groupId>
+          <artifactId>ojdbc7</artifactId>
+          <version>12.1.0.2</version>
+          <scope>system</scope>
+          <systemPath>C:/backEnd/springFramework/src/main/webapp/WEB-INF/lib/ojdbc7.jar</systemPath>
+      </dependency>-->
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis</artifactId>
+	    <version>3.5.6</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis-spring</artifactId>
+	    <version>2.0.6</version>
+	</dependency>
 	</dependencies>
 </project>
