--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,5 +41,23 @@
       <filter-name>CharacterEncodingFilter</filter-name>
       <url-pattern>/*</url-pattern>
    </filter-mapping>
+   
+<!-- Spring Security 설정 -->
+   <filter>
+      <filter-name>springSecurityFilterChain</filter-name>
+      <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+   </filter>
+   
+   <filter-mapping>
+      <filter-name>springSecurityFilterChain</filter-name>
+      <url-pattern>/*</url-pattern>
+   </filter-mapping>
+   
+   <!-- 로그인 중복을 인식할 수 있도록 설정 -->
+   <listener>
+   		<listener-class>
+   			org.springframework.security.web.session.HttpSessionEventPublisher
+   		</listener-class>
+   </listener>
 
 </web-app>
